--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,9 @@
 
 body {
 	background: #F3EBE9;
-	font-size: 100%;
-	font-family: 'Times New Roman', serif; 
+  /*background: rgb(244, 235, 233);*/
+  font-size: 100%;
+	font-family: 'Times New Roman', serif;
 }
 
 .wrapper {
@@ -15,6 +16,47 @@ body {
 	margin: 0 auto;
 	background: #fff;
 	padding: 0 45px 20px;
+  /*position: absolute;*/
 }
 
 /* Write all remaining styles here */
+h1 {
+  padding-bottom: 10px;
+  margin: 0 0 5px;
+  font-size: 5em;
+  font-family: 'Baskerville', serif;
+  border-bottom: 1px solid rgb(147, 174, 166);
+  color: rgb(147, 174, 166);
+}
+
+h1:hover {
+  color:
+}
+
+h2 {
+  color: rgb(108, 128, 122);
+  font-size: 2em;
+}
+
+p {
+  color: rgb(85, 85, 85);
+}
+
+
+
+/*//////MEDIA//////*/
+img {
+  max-width: 100%;
+  border: 5px solid rgb(158, 176, 170);
+}
+
+
+#copyright {
+  float: right;
+}
+
+div #copyright img {
+  /*border: 4px solid #ccc;*/
+  /*border: 4px solid rgb(210, 210, 210,);*/
+
+}
