--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 
 .wrapper {
 	width: 960px;
-	margin: 0 0 auto;
+	margin: 0;
 	background: #fff;
 	padding: 0 45px 20px;
   /*position: absolute;*/
