Automatically backed up by Learn

--- a/css/style.css
+++ b/css/style.css
@@ -29,9 +29,9 @@ h1 {
   color: rgb(147, 174, 166);
 }
 
-h1:hover {
+/*h1:hover {
   color: rgb(130, 154, 149);
-}
+}*/
 
 h2 {
   color: rgb(108, 128, 122);
