--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,10 @@ p {
   color: rgb(85, 85, 85);
 }
 
+#about p a {
+  text-decoration: none;
+}
+
 #press img {
   border: 5px solid rgb(204, 204, 204);
 }
