--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,10 @@ p {
   border: 5px solid rgb(204, 204, 204);
 }
 
+#press a {
+  color: rgb(152, 173, 166);
+}
+
 footer {
   text-align: right;
   font-size: 0.8em
