--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ p {
   border: 5px solid rgb(204, 204, 204);
 }
 
-#press a:hover img {
+#press img:hover {
   border-color: rgb(152, 173, 166);
 }
 
